# wersalka-lang

./: .clang-format  .gitignore  MODULE.bazel
docs/: lang.md
runtime/: BUILD  ast.cc  ast.h  codegen.cc  codegen.h  diagnostic.cc  diagnostic.h  driver.cc  driver.h  parser.cc  parser.h  playground.cc  source.cc  source.h  sym.cc  sym.h  tokenizer.cc  tokenizer.h  zone.cc  zone.h
runtime/gc/: gc.cc  gc.h  handle.cc  handle.h  mark_sweep.cc  mark_sweep.h
runtime/vm/: builtins.cc  builtins.h  bytecode.cc  bytecode.h  code_object.cc  code_object.h  gc.cc  gc.h  object.cc  object.h  object_impl.cc  object_impl.h  runtime.cc  runtime.h  value.cc  value.h  vm.cc  vm.h
test/: BUILD  parser_test.cc  test_fixtures.cc  test_fixtures.h  tokenizer_test.cc  zone_test.cc
